--- a/templates/base.html
+++ b/templates/base.html
@@ -1,25 +1,31 @@
 <!doctype html>
 <html lang="en">
 <head>
+
   {% block title %}<title>Sushi service</title>{% endblock %}
   <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
   <title>Document</title>
+
 </head>
 <body>
-  {% block sidebar %}
-    {% include "includes/sidebar.html" %}
-  {% endblock %}
 
-  {% block content %}
-
-  {% endblock %}
+  <div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-2">
+            {% block sidebar %}
+                {% include "includes/sidebar.html" %}
+            {% endblock %}
+        </div>
+        <div class="col-sm-10 ">
+            {% block content %}{% endblock %}
+        </div>
+    </div>
+  </div>
 
 </body>
 </html>
