--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -1,3 +1,4 @@
 <ul class="sidebar-nav list-group">
   <li class="list-group-item"><a href="{% url 'sushi:index' %}">Home</a></li>
+  <li class="list-group-item"><a href="{% url 'sushi:cooks-view' %}">Cooks</a></li>
 </ul>
