--- a/templates/base.html
+++ b/templates/base.html
@@ -9,21 +9,21 @@
         href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
-  <title>Document</title>
-
+  {% load static %}
+  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
 
   <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-2">
-            {% block sidebar %}
-                {% include "includes/sidebar.html" %}
-            {% endblock %}
-        </div>
-        <div class="col-sm-10 ">
-            {% block content %}{% endblock %}
-        </div>
+      <div class="col-sm-2">
+        {% block sidebar %}
+          {% include "includes/sidebar.html" %}
+        {% endblock %}
+      </div>
+      <div class="col-sm-10 ">
+        {% block content %}{% endblock %}
+      </div>
     </div>
   </div>
 
