Create dishes list (view, url, template). Update sidebar.html

--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -1,4 +1,5 @@
 <ul class="sidebar-nav list-group">
   <li class="list-group-item"><a href="{% url 'sushi:index' %}">Home</a></li>
   <li class="list-group-item"><a href="{% url 'sushi:cooks-view' %}">Cooks</a></li>
+  <li class="list-group-item"><a href="{% url 'sushi:dishes-view' %}">Dishes</a></li>
 </ul>
