Update incorrect name of views

--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -1,5 +1,5 @@
 <ul class="sidebar-nav list-group">
   <li class="list-group-item"><a href="{% url 'sushi:index' %}">Home</a></li>
-  <li class="list-group-item"><a href="{% url 'sushi:cooks-view' %}">Cooks</a></li>
-  <li class="list-group-item"><a href="{% url 'sushi:dishes-view' %}">Dishes</a></li>
+  <li class="list-group-item"><a href="{% url 'sushi:cooks-list' %}">Cooks</a></li>
+  <li class="list-group-item"><a href="{% url 'sushi:dishes-list' %}">Dishes</a></li>
 </ul>
