--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -2,4 +2,5 @@
   <li class="list-group-item"><a href="{% url 'sushi:index' %}">Home</a></li>
   <li class="list-group-item"><a href="{% url 'sushi:cooks-list' %}">Cooks</a></li>
   <li class="list-group-item"><a href="{% url 'sushi:dishes-list' %}">Dishes</a></li>
+  <li class="list-group-item"><a href="{% url 'sushi:dish-types-list' %}">Dish types</a></li>
 </ul>
