Add link for each element in cook and dish lists

--- a/templates/sushi/cook_list.html
+++ b/templates/sushi/cook_list.html
@@ -6,7 +6,6 @@
   {% if cook_list %}
     <table class="table">
       <tr>
-        <th>ID</th>
         <th>Username</th>
         <th>First name</th>
         <th>Last name</th>
@@ -14,8 +13,7 @@
       </tr>
     {% for cook in cook_list %}
       <tr>
-        <td>{{ cook.id }}</td>
-        <td>{{ cook.username }}</td>
+        <td><a href="{% url 'sushi:cook-detail' pk=cook.id %}">{{ cook.username }}</a></td>
         <td>{{ cook.first_name }}</td>
         <td>{{ cook.last_name }}</td>
         <td>{{ cook.years_of_experience }}</td>
