--- a/templates/sushi/dish_detail.html
+++ b/templates/sushi/dish_detail.html
@@ -3,9 +3,9 @@
 {% block content %}
   <h1>Dish: {{ dish.name }} </h1>
 
-  <p><strong>Dish type:</strong> {{ dish.dish_type.name }}</p>
-  <p><strong>Dish price:</strong> {{ dish.price }}</p>
-  <p><strong>Dish description:</strong> {{ dish.description }}</p>
+  <p><strong>Type:</strong> {{ dish.dish_type.name }}</p>
+  <p><strong>Price:</strong> {{ dish.price }}</p>
+  <p><strong>Description:</strong> {{ dish.description }}</p>
 
   <div class="ml-3">
     <h4>Cooks</h4>
