Add a page hit counter

--- a/templates/sushi/index.html
+++ b/templates/sushi/index.html
@@ -8,4 +8,5 @@
     <li><strong>Dishes: </strong>{{ num_dishes }}</li>
     <li><strong>Types of dish: </strong>{{ num_dish_types }}</li>
   </ul>
+  <p>You have visited this page {{ num_visits }} time{{ num_visits|pluralize }}.</p>
 {% endblock %}
