--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -1,4 +1,14 @@
 <ul class="sidebar-nav list-group">
+
+  {% if user.is_authenticated %}
+    <li class="list-group-item">User: <a href="{{ user.get_absolute_url }}">{{ user.get_username }}</a></li>
+    <li class="list-group-item"><a href="{% url 'logout'%}">Logout</a></li>
+  {% else %}
+    <li class="list-group-item"><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
+  {% endif %}
+
+  <br>
+
   <li class="list-group-item"><a href="{% url 'sushi:index' %}">Home</a></li>
   <li class="list-group-item"><a href="{% url 'sushi:cooks-list' %}">Cooks</a></li>
   <li class="list-group-item"><a href="{% url 'sushi:dishes-list' %}">Dishes</a></li>
