--- a/templates/sushi/dish_confirm_delete.html
+++ b/templates/sushi/dish_confirm_delete.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <h1>Delete dish</h1>
-  <h3>Are you sure you want to delete dish "{{ dish.name }}?</h3>
+  <h3>Are you sure you want to delete dish "{{ dish.name }}"?</h3>
   <form action="" method="post">
     {% csrf_token %}
 
