Add buttons for creating cooks, dishes, dish types

--- a/templates/sushi/dish_type_list.html
+++ b/templates/sushi/dish_type_list.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Dish types List</h1>
+  <h1>
+    Our dish types
+    <a href="{% url 'sushi:dish-type-create' %}" class="btn btn-primary link-to-page">
+      Create
+    </a>
+  </h1>
 
   {% if dish_type_list %}
     <ul>
