--- a/templates/sushi/cook_list.html
+++ b/templates/sushi/cook_list.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Our cooks</h1>
+  <h1>
+    Our cooks
+    <a href="{% url 'sushi:cook-create' %}" class="btn btn-primary link-to-page">
+      Create
+    </a>
+  </h1>
   <br>
   {% if cook_list %}
     <table class="table">
