--- a/templates/sushi/dish_list.html
+++ b/templates/sushi/dish_list.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Our dishes</h1>
+  <h1>
+    Our dishes
+    <a href="{% url 'sushi:dish-create' %}" class="btn btn-primary link-to-page">
+      Create
+    </a>
+  </h1>
   <br>
   {% if dish_list %}
     <table class="table">
