--- a/templates/sushi/dish_list.html
+++ b/templates/sushi/dish_list.html
@@ -14,12 +14,20 @@
         <th>Name</th>
         <th>Price</th>
         <th>Dish type</th>
+        <th>Update</th>
+        <th>Delete</th>
       </tr>
     {% for dish in dish_list %}
       <tr>
         <td><a href="{% url 'sushi:dish-detail' pk=dish.id %}">{{ dish.name }}</a></td>
         <td>{{ dish.price }}</td>
         <td>{{ dish.dish_type }}</td>
+        <td><a class="btn btn-primary" href="{% url 'sushi:dish-update' pk=dish.id %}">
+          Update
+        </a></td>
+        <td><a class="btn btn-danger" href="{% url 'sushi:dish-delete' pk=dish.id %}">
+          Delete
+        </a></td>
       </tr>
     {% endfor %}
     </table>
