--- a/templates/sushi/dish_type_list.html
+++ b/templates/sushi/dish_type_list.html
@@ -10,8 +10,12 @@
 
   {% if dish_type_list %}
     <ul>
-      {% for dish in dish_type_list %}
-        <li>{{ dish.name }}</li>
+      {% for dish_type in dish_type_list %}
+        <li>
+          {{ dish_type.name }}
+          <a class="btn btn-danger" href="{% url 'sushi:dish-type-delete' pk=dish_type.id %}">Delete</a>
+        </li>
+        <br>
       {% endfor %}
     </ul>
   {% else %}
