Fix update title for cook's, specified currency for dishes

--- a/templates/sushi/dish_list.html
+++ b/templates/sushi/dish_list.html
@@ -12,7 +12,7 @@
     <table class="table">
       <tr>
         <th>Name</th>
-        <th>Price</th>
+        <th>Price (USD)</th>
         <th>Dish type</th>
         <th>Update</th>
         <th>Delete</th>
