--- a/templates/sushi/cook_list.html
+++ b/templates/sushi/cook_list.html
@@ -15,7 +15,7 @@
         <th>First name</th>
         <th>Last name</th>
         <th>Years of experience</th>
-        <th>Update (years of experience)</th>
+        <th>Update</th>
         <th>Delete</th>
       </tr>
     {% for cook in cook_list %}
