--- a/templates/sushi/cook_detail.html
+++ b/templates/sushi/cook_detail.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Cook: {{ cook.first_name }} {{ cook.last_name }} </h1>
+  <h1>
+    Cook: {{ cook.first_name }} {{ cook.last_name }}
+    <a href="{% url 'sushi:cook-update' pk=cook.id %}" class="btn btn-primary link-to-page">
+      Update
+    </a>
+  </h1>
 
   <p><strong>Username:</strong> {{ cook.username }} </p>
   <p><strong>Years of experience:</strong> {{ cook.years_of_experience }}</p>
