--- a/templates/sushi/dish_detail.html
+++ b/templates/sushi/dish_detail.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Dish: {{ dish.name }} </h1>
+  <h1>
+    Dish: {{ dish.name }}
+    <a href="{% url 'sushi:dish-update' pk=dish.id %}" class="btn btn-primary link-to-page">
+      Update
+    </a>
+  </h1>
 
   <p><strong>Type:</strong> {{ dish.dish_type.name }}</p>
   <p><strong>Price:</strong> {{ dish.price }}</p>
