--- a/templates/base.html
+++ b/templates/base.html
@@ -3,13 +3,15 @@
 <head>
 
   {% block title %}<title>Sushi service</title>{% endblock %}
+  {% load static %}
+  <link rel="icon" type="image/x-icon" href="{% static 'free-icon-sushi-roll-2713982.png' %}">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
-  {% load static %}
+
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
