--- a/templates/sushi/index.html
+++ b/templates/sushi/index.html
@@ -1,12 +1,20 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Welcome to my Sushi service!</h1>
-  <h3>We have:</h3>
-  <ul>
-    <li><strong>Cooks: </strong>{{ num_cooks }}</li>
-    <li><strong>Dishes: </strong>{{ num_dishes }}</li>
-    <li><strong>Types of dish: </strong>{{ num_dish_types }}</li>
-  </ul>
-  <p>You have visited this page {{ num_visits }} time{{ num_visits|pluralize }}.</p>
+
+  <h1>Welcome to my Sushi-Kitchen service!</h1>
+  <h3>Here you can check all info about it.</h3>
+  <br>
+  <h5>My service has the next indicators:</h5>
+  <hr>
+    <h3>Cooks: {{ num_cooks }}</h3>
+    <p>Top cooks who trained at top universities of Europe.</p>
+  <hr>
+    <h3>Dishes: {{ num_dishes }}</h3>
+    <p>These are amazing dishes with refined taste.</p>
+  <hr>
+    <h3>Types of dish: {{ num_dish_types }}</h3>
+    <p></p>
+  <hr>
+
 {% endblock %}
