--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en">
 <head>
-
   {% block title %}<title>Sushi service</title>{% endblock %}
   {% load static %}
   <link rel="icon" type="image/x-icon" href="{% static 'free-icon-sushi-roll-2713982.png' %}">
@@ -11,27 +10,20 @@
         href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
-
-  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+  {% load static %}
+  <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
-<body>
+<body style="background: url('{% static "background.jpeg" %}')">
+  {% block sidebar %}
+    {% include "includes/sidebar.html" %}
+  {% endblock %}
 
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-2">
-        {% block sidebar %}
-          {% include "includes/sidebar.html" %}
-        {% endblock %}
-      </div>
-      <div class="col-sm-10 ">
-        {% block content %}{% endblock %}
+  <div class="content">
+    {% block content %}{% endblock %}
 
-        {% block pagination %}
-          {% include "includes/pagination.html" %}
-        {% endblock %}
-
-      </div>
-    </div>
+    {% block pagination %}
+      {% include "includes/pagination.html" %}
+    {% endblock %}
   </div>
 
 </body>
