--- a/templates/includes/pagination.html
+++ b/templates/includes/pagination.html
@@ -1,20 +1,22 @@
 {% load query_transform %}
 {% if is_paginated %}
-  <ul class="pagination">
-    {% if page_obj.has_previous %}
-      <li class="page-item">
-        <a href="?{% query_transform request page=page_obj.previous_page_number %}" class="page-link">prev</a>
-      </li>
-    {% endif %}
+  <div style="text-align: center">
+    <ul class="pagination">
+      {% if page_obj.has_previous %}
+        <li class="page-item">
+          <a href="?{% query_transform request page=page_obj.previous_page_number %}" class="page-link">prev</a>
+        </li>
+      {% endif %}
 
-    <li class="page-item active">
-      <span class="page-link">{{ page_obj.number }} of {{ paginator.num_pages }}</span>
-    </li>
-
-    {% if page_obj.has_next %}
-      <li class="page-item">
-        <a href="?{% query_transform request page=page_obj.next_page_number %}" class="page-link">next</a>
+      <li class="page-item active">
+        <span class="page-link">{{ page_obj.number }} of {{ paginator.num_pages }}</span>
       </li>
-    {% endif %}
-  </ul>
+
+      {% if page_obj.has_next %}
+        <li class="page-item">
+          <a href="?{% query_transform request page=page_obj.next_page_number %}" class="page-link">next</a>
+        </li>
+      {% endif %}
+    </ul>
+  </div>
 {% endif %}
